2007-11-15  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Added Sakar no. 1638x Cyberpix
	* README.mars: Description of new camera added. 

2007-10-12  Theodore Kilgore <kilgota@auburn.edu>
	* mars.c: "0x50" decompression issues resolved. 

2007-10-21  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Added Vivitar Mini Digital Camera 
	* README.mars: Description of new camera added. 

2007-08-14  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Added Trust Spycam 100, reported by 
		     Aurelien Jacobs <aurel@gnuage.org>

2007-04-07  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Clean up signedness errors
	* mars.c:    ditto

2007-04-07  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added support for downloading audio files, as some 
		     of the Mars cameras have such abilities. 
	* README.mars: revisions. 

2007-01-24  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added "Sakar 56399 Spyshot"
		     Added "Pixart Gemini Keychain Camera"
		     reported by R P Herrold <herrold@owlriver.com>
	* README.mars: Added these cameras there, too. 

2006-12-23  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added "ION digital camera"
	* README.mars: Added "ION digital camera"

2006-11-19  Marcus Meissner <marcus@jet.franken.de>

	* mars.c,mars.h: Made some functions static to mars.c

2006-09-23  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: RAW files saved now with pixelsize information, 
		     so that the info in them is "self-contained".
	* mars.c:    usleep() added to mars_routine() to fix a USB timing 
		     problem reported by conon <troll@arach.net.au>. Changes
		     to decompression algorithm proposed by conon also 
		     adopted. Changes to way of handling RAW files imply 
		     elimination of mars_get_picture_width().
	* mars.h:    now-extraneous functions de-listed. 	
	* README:    updated; changes to RAW file header explained.
	* protocol.txt: updated.


2006-08-28  Theodore Kilgore <kilgota@auburn.edu>
